<resources>
    <string name="app_name">ADLMIDI Player</string>
    <string name="open">Open</string>
    <string name="playpause">Play/Pause</string>
    <string name="quit">Quit</string>
    <string name="bankNo">Music bank</string>
    <string name="htremolo">Deep Tremolo</string>
    <string name="hvibrato">Deep Vibrato</string>
    <string name="scalemod">Scalable modulation</string>
    <string name="adlibdrums">AdLib drums mode</string>
    <string name="numChips">Number of emulated chips</string>
    <string name="num4opChans">Total number of 4-op channels</string>
    <string name="restart">Restart</string>
    <string name="logvolumes">Logarophmic volumes</string>
</resources>
