<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.wohlsoft.adlmidiplayer.Player">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sample_text"
        android:id="@+id/openFile"
        tools:text="@string/open"
        android:layout_alignRight="@+id/playPause"
        android:layout_alignEnd="@+id/playPause"
        android:layout_alignLeft="@+id/playPause"
        android:layout_alignStart="@+id/playPause"
        android:text="@string/open" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/openFile"
        android:layout_alignStart="@+id/openFile"
        android:id="@+id/quitapp"
        tools:text="@string/quit"
        android:layout_alignRight="@+id/playPause"
        android:layout_alignEnd="@+id/playPause"
        android:text="@string/quit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playPause"
        tools:text="@string/playpause"
        android:layout_below="@+id/openFile"
        android:layout_centerHorizontal="true"
        android:text="@string/playpause" />

    <CheckBox
        android:text="deepTremolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playPause"
        android:layout_marginTop="24dp"
        android:id="@+id/deepTremolo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:text="@string/htremolo" />

    <CheckBox
        android:text="deepVibrato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deepTremolo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/deepVibrato"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/hvibrato" />

    <CheckBox
        android:text="scalableMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deepVibrato"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scalableModulation"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/scalemod" />

    <CheckBox
        android:text="adlDrums"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scalableModulation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/adlibDrumsMode"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/adlibdrums" />

    <TextView
        android:text="@string/bankNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/adlibDrumsMode"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="@string/bankNo" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bankNo"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
